force-app/main/default/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
  <label>Application Log</label>
  <pluralLabel>Application Logs</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Log Name</label>
  </nameField>
  <sharingModel>Private</sharingModel>
</CustomObject>