force-app/main/default/objects/Application_Log__c/fields/Level__c.field-meta.xml
<CustomField>
  <fullName>Level__c</fullName>
  <label>Level</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>INFO</fullName>
        <default>true</default>
      </value>
      <value>
        <fullName>WARN</fullName>
      </value>
      <value>
        <fullName>ERROR</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>