force-app/main/default/objects/Application_Log__c/fields/Message__c.field-meta.xml
<CustomField>
  <fullName>Message__c</fullName>
  <label>Message</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>